<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        >

        <hoanui.oboesynth.KnobView
            android:id="@+id/attackKnob"
            app:value="0.01"
            app:min="0"
            app:max="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:paddingTop="8dp"
            app:label="@string/attack" />
        <hoanui.oboesynth.KnobView
            android:id="@+id/decayKnob"
            app:value="0.5"
            app:min="0"
            app:max="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:layout_margin="2dp"
            app:label="@string/decay" />
        <hoanui.oboesynth.KnobView
            android:id="@+id/sustainKnob"
            app:value="0.1"
            app:min="0"
            app:max="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:paddingTop="8dp"
            app:label="@string/sustain" />
        <hoanui.oboesynth.KnobView
            android:id="@+id/realeaseKnob"
            app:value="1.0"
            app:min="0"
            app:max="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:layout_margin="2dp"
            app:label="@string/release" />

        <hoanui.oboesynth.KnobView
            android:id="@+id/cutoffKnob"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            app:label="@string/cutoff"
            app:max="0.99"
            app:min="0"
            app:value="0.99" />

        <hoanui.oboesynth.KnobView
            android:id="@+id/resonanceKnob"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            app:label="@string/resonance"
            app:max="0.99"
            app:min="0.00"
            app:value="0.01" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">

            <Button
                android:id="@+id/octaveUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="up"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/octaveDown"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="down"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bgWave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/lightgray"
                android:layout_margin="5dp">
                <Button
                    android:id="@+id/boutonWave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sine_wave"
                    android:button="@null"/>
             </LinearLayout>

            <LinearLayout
                android:id="@+id/bgFilter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/lightgray"
                android:layout_margin="5dp">
                <Button
                    android:id="@+id/boutonFilter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/lowpass"
                    android:button="@null"
                    android:layout_margin="5dp" />
                </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/preset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFCF40"
                android:popupBackground="#FFCF40"
                />
            <SeekBar
                android:id="@+id/pitch"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="match_parent"
                android:progressDrawable="@drawable/custom_seekbar"
                android:max="40"
                android:progress="20"/>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <hoanui.oboesynth.PianoView
            android:id="@+id/pv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

        </hoanui.oboesynth.PianoView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchDist"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="Distortion"
                android:textAlignment="center"
                android:textColor="@color/lightgray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <Button
                    android:id="@+id/modeDist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:text="softClip"
                    android:textColor="@color/colorPrimary" />

                <hoanui.oboesynth.KnobView
                    android:id="@+id/distDrive"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:label="@string/drive"
                    app:max="20"
                    app:min="0"
                    app:value="10"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>